docs: 로그인 API 스웨거 추가
